# Aegis-finetuning

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-train.txt  requirements.txt
.claude/: settings.local.json
baselines/: aegis_caller.py  base.py  gemini_caller.py  openai_caller.py  presidio_caller.py  qwen_base.py
data/: adversarial.py  convert.py  download.py  format.py  heldout.py  labels.py  schema.py  spotcheck.py
data/eval/: adversarial.jsonl  heldout.jsonl  wikipedia_cache.json
eval/: calibration.py  eval.ipynb  harness.py  metrics.py  perf.py  run_baseline.py  runner.py
inference/: prompts.py
scripts/: colab_setup.md
tests/: test_baselines_base.py  test_calibration.py  test_harness.py  test_metrics.py  test_perf.py  test_runner.py
train/: train.ipynb  train.py
