[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.0.1"
description = "Fine-tuned 7B PII span detector with a real eval harness"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
aegis = "cli.main:app"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["data*", "train*", "inference*", "baselines*", "eval*", "cli*"]
exclude = ["tests*", "scripts*", "notebooks*"]

# --- ruff -------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data/raw", "data/processed", "notebooks"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "B",             # bugbear
    "UP",            # pyupgrade
    "S",             # bandit
    "PT",            # pytest
    "RUF",           # ruff-native
]
ignore = [
    "E501",  # line length handled by formatter
    "S101",  # asserts are fine
    "B008",  # function calls in defaults — typer uses this idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N802", "N803"]
"cli/*"   = ["B008"]  # typer.Option(...) defaults

# --- pytest -----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
